--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Rosetta Stone</title>
+    <title id="title">Rosetta Stone</title>
 
-    <script src="main.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>JS Rosetta Stone</h1>
@@ -19,5 +18,6 @@
         <input type='submit' value="Yell" class='btn btn-default' />
       </form>
     </div>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
